Update birth names analysis.ipynb

--- a/birth names analysis.ipynb
+++ b/birth names analysis.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# QUESTION\n",
     "\n",
-    "Part One: Go to the Social Security Administration US births website(https://www.ssa.gov/oact/babynames/numberUSbirths.html) and select the births table there and copy it to your clipboard. Use the pandas read_clipboard function to read the table into Python, and use matplotlib to plot male and female births for the years covered in the data. Put this in an ipython notebook file. In the same notebook, use Python to get a list of male and female names from these files(http://gawron.sdsu.edu/python_for_ss/course_core/book_draft/_downloads/baby_names.zip) This data is broken down by year of birth. \n",
+    "Part One: Go to the Social Security Administration US births website(https://www.ssa.gov/oact/babynames/numberUSbirths.html) and select the births table there and copy it to your clipboard. Use the pandas read_clipboard function to read the table into Python, and use matplotlib to plot male and female births for the years covered in the data. Put this in an ipython notebook file. In the same notebook, use Python to get a list of male and female names from these files(https://www.dropbox.com/s/885phnsm7g5eytm/baby_names.zip?dl=0) This data is broken down by year of birth. \n",
     "\n",
     "Part Two: Aggregate the data for all years (see the examples in the Pandas notebooks). Use Python Counters to get letter frequencies for male and female names. Use matplotlib to draw a plot that for each letter (x-axis) shows the frequency of that letter (y-axis) as the last letter for both for male and female names. \n",
     "\n",
