Update birth names analysis.ipynb

--- a/birth names analysis.ipynb
+++ b/birth names analysis.ipynb
@@ -198,7 +198,7 @@
     "columns = ['name','sex','births']\n",
     "    \n",
     "for year in years:\n",
-    "    path = 'C:/Users/Mahe/Downloads/baby_names/names/yob{0:d}.txt'.format(year)\n",
+    "    path = '../baby_names/names/yob{0:d}.txt'.format(year)\n", 
     "    frame = pd.read_csv(path,names=columns)\n",
     "    frame['year'] = year\n",
     "    pieces.append(frame)    \n",
